--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.15",
+    "chart.js": "^4.4.8",
     "emailjs-com": "^3.2.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-simple-typewriter": "^5.0.1",
     "tailwindcss": "^4.0.15"
   },
   "devDependencies": {
