--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@tailwindcss/vite": "^4.0.15",
     "chart.js": "^4.4.8",
     "emailjs-com": "^3.2.0",
-    "framer-motion": "^12.5.0",
+    "framer-motion": "^12.6.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
@@ -24,7 +24,8 @@
     "react-router-dom": "^7.4.0",
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^11.0.5",
-    "react-tsparticles": "^2.12.2"
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
