--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^11.0.5",
     "react-tsparticles": "^2.12.2",
+    "styled-components": "^6.1.17",
     "tsparticles": "^3.8.1"
   },
   "devDependencies": {
