--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chart.js": "^4.4.8",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.6.2",
+    "lucide-react": "^0.511.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
