--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tailwindcss/vite": "^4.0.15",
+    "@vercel/analytics": "^1.5.0",
     "chart.js": "^4.4.8",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.6.2",
