--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^7.5.3",
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^11.0.5",
+    "react-tooltip": "^5.28.1",
     "react-tsparticles": "^2.12.2",
     "styled-components": "^6.1.17",
     "tsparticles": "^3.8.1"
