--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@tailwindcss/vite": "^4.0.15",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "animejs": "^4.0.2",
     "chart.js": "^4.4.8",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.6.2",
     "lucide-react": "^0.511.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^19.0.0",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.5.0",
