--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@radix-ui/react-accordion": "^1.2.11",
     "@tailwindcss/vite": "^4.0.15",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "animejs": "^4.0.2",
     "chart.js": "^4.4.8",
     "emailjs-com": "^3.2.0",
-    "framer-motion": "^12.6.2",
+    "framer-motion": "^12.23.3",
     "lucide-react": "^0.511.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
