--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/vite": "^4.0.15",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
@@ -35,6 +36,7 @@
     "react-tooltip": "^5.28.1",
     "react-tsparticles": "^2.12.2",
     "styled-components": "^6.1.17",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "tsparticles": "^3.8.1"
   },
   "devDependencies": {
