--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.5.0",
+    "react-pulse-dot": "^2.0.0",
     "react-router-dom": "^7.5.3",
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^11.0.5",
