--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
     "react-simple-typewriter": "^5.0.1",
+    "react-snowfall": "^2.4.0",
     "react-toastify": "^11.0.5",
     "react-tooltip": "^5.28.1",
     "react-tsparticles": "^2.12.2",
