PWA update and effeciency

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,7 @@
       "destination": "/index.html"
     }
   ],
+  
   "headers": [
     {
       "source": "/index.html",
@@ -15,6 +16,39 @@
         }
       ]
     },
+
+    {
+      "source": "/service-worker.js",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/javascript; charset=utf-8"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        },
+        {
+          "key": "Service-Worker-Allowed",
+          "value": "/"
+        }
+      ]
+    },
+
+    {
+      "source": "/manifest.json",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/manifest+json"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        }
+      ]
+    },
+    
     {
       "source": "/assets/(.*)",
       "headers": [
